# compression

./: .gitignore  CMakeLists.txt  README.md
include/compression/: bdi.h  common.h  compression_base.h  cpack.h  fpc.h  huffman.h  lz4.h
src/: bdi.cc  cpack.cc  fpc.cc  huffman.cc  lz4.cc
tests/: CMakeLists.txt  bdi_test.cc  cpack_test.cc  fpc_test.cc  huffman_test.cc  lz4_test.cc
